Migrate to Helidon 4 + JDK21, there is still error